# workset

./: .gitignore  .golangci-complexity.yml  .golangci.yml  .goreleaser.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  cog.toml  go.mod  go.sum  go.work  go.work.sum  guardrails.yml  mkdocs.yml  plan-bak.md  plan.md  release-please-config.json  requirements.txt  tmp.txt
.github/: CODEOWNERS  dependabot.yml  frontend-complexity-allowlist.txt  pull_request_template.md
.workset/: hooks.yaml
OPUS-tauri-app/: .gitignore  index.html  package-lock.json  package.json  (+2 more)
OPUS-tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
OPUS-tauri-app/src-tauri/capabilities/: default.json
OPUS-tauri-app/src-tauri/icons/: icon.icns
OPUS-tauri-app/src-tauri/src/: lib.rs  main.rs  state.rs  terminal_manager.rs
OPUS-tauri-app/src-tauri/src/cli/: env.rs  mod.rs  paths.rs  runner.rs
OPUS-tauri-app/src-tauri/src/commands/: context.rs  diagnostics.rs  diff.rs  github.rs  migrations.rs  mod.rs  pty.rs  repos.rs  terminal.rs  worksets.rs  workspaces.rs
OPUS-tauri-app/src-tauri/src/diff_engine/: mod.rs  patch.rs  summary.rs  watcher.rs
OPUS-tauri-app/src-tauri/src/jobs/: migration.rs
OPUS-tauri-app/src-tauri/src/sessiond/: client.rs  lifecycle.rs  mod.rs  protocol.rs
OPUS-tauri-app/src-tauri/src/store/: layout.rs  migrations.rs  mod.rs  ui_context.rs  workset_profiles.rs
OPUS-tauri-app/src-tauri/src/types/: context.rs  diagnostics.rs  diff.rs  error.rs  job.rs  layout.rs  mod.rs  pty.rs  repo.rs  workset.rs  workspace.rs
(+1036 files in other folders)
