[package]
name = "workset-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "workset_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "7"
dirs = "6"
portable-pty = "0.8"
log = "0.4"
env_logger = "0.11"
